# wg-watch

./: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  listings.html  main.py  manage.py  mypy.ini  pyproject.toml
data/: wg_gesucht.html
data_prepper/: main.py
geocode/: main.py
input/sql/: city_comparison.sql
scraper/: main.py
staticfiles/: staticfiles.json
staticfiles/css/: input.0f14373a8b5f.css  input.18a7cd9969a7.css  input.38216e41db66.css  input.5166f1e11247.css  input.7f7a912341a5.css  input.af5cbe51ecd7.css  input.css  output.1228fd68a4e5.css  output.4a963ce995a9.css  output.61e9f7fd2109.css
staticfiles/js/: leaflet-global-src.js.map  leaflet-src.cb20ca7c881f.js  leaflet-src.js  leaflet.9892eb03a337.js  leaflet.js.map
wgwatch/: asgi.py  dataloader.py  models.py  settings.py  storage.py  types.py  urls.py  views.py  wsgi.py
wgwatch/migrations/: 0001_initial.py  0002_realestatelocation.py
wgwatch/static/css/: choicesjs.css  input.css  output.css
wgwatch/static/js/: leaflet-src.js.map
wgwatch/templates/: about.html  base.html  index.html  map.html
wgwatch/templates/cotton/: chart.html  table.html
wgwatch/templatetags/: dynamic_access.py
